--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <div class="box1">
                <div class="box2">
-                  <div class="linear" data-aos="fade-left"></div>
+                  <div class="linear"></div>
                   <img src="img/profile.png" class="img-text0" data-aos="fade-left">
                </div>
             </div>
